fix: font break in upnext

--- a/src/components/Timers.module.css
+++ b/src/components/Timers.module.css
@@ -20,14 +20,14 @@
 
 .up-next {
   display: flex;
-  gap: 0.3rem;
+  gap: 0.2em;
   font-size: smaller;
   color: #f0eb8d;
 }
 
 .timer {
   display: flex;
-  gap: 0.5rem;
-  margin-block: 0.3rem 0;
+  gap: 0.5em;
+  margin-block: 0.3em 0;
   cursor: help;
 }
